[tool.poetry]

name = "jupyter-browser-reload"
version = "0.1.0"
description = """
An utility that extends Jupytext. Allows to auto-refresh browser when source file is changed.
"""
authors = ["Dmitry Lipin <d.lipin@outlook.com>"]

[tool.poetry.dependencies]

python="^3.6"
selenium="^3.141.0"
jupytext="^1.5.2"
watchdog="^0.10.3"