[tool.poetry]
name = "jure"
version = "0.2.0"
description = "An utility that extends Jupytext. Allows to auto-refresh browser when source file is changed."
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = ["jupyter", "reload", "jupytext"]
authors = ["Dmitry Lipin <d.lipin@outlook.com>"]

[tool.poetry.scripts]
jure = 'jure.main:main'

[tool.poetry.dependencies]
python="^3.6"
selenium="^3.141.0"
jupytext="^1.5.2"
watchdog="^0.10.3"
loguru="^0.5.2"
pytest="^6.0.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

